--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,10 @@
   <groupId>org.example</groupId>
   <artifactId>playground</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <modules>
+        <module>multi-thread</module>
+    </modules>
+    <packaging>pom</packaging>
 
   <name>playground</name>
   <url>http://maven.apache.org</url>
